config: switch to Eclipse JDT formatter and adjust formatting rules
- Switch from Google Java Format to Eclipse JDT formatter in Spotless configuration
- Set lineSplit to 128 characters for code line length limit
- Set alignment_for_superclass_in_type_declaration to 0 to keep extends on same line
- Set alignment_for_superinterfaces_in_type_declaration to 0 to keep implements on same line
- Apply formatting changes across all modules to comply with new rules