@@ -18,14 +18,12 @@ import java.util.stream.Collectors;
  */
 public class ErrorManager {
     private static final BiMap<Integer, ErrorCode> GLOBAL_ERROR_CODE_MAP = HashBiMap.create();
-    private static final Map<ErrorCode, ProjectModule> ERROR_PROJECT_MODULE_MAP =
-            new ConcurrentHashMap<>();
+    private static final Map<ErrorCode, ProjectModule> ERROR_PROJECT_MODULE_MAP = new ConcurrentHashMap<>();
 
-    private static final Comparator<ProjectModule> PROJECT_MODULE_COMPARATOR =
-            Comparator.comparingInt(ProjectModule::getProjectCode)
-                    .thenComparingInt(ProjectModule::getModuleCode);
-    private static final Comparator<ErrorCode> ERROR_CODE_COMPARATOR =
-            Comparator.comparingInt(ErrorCode::getNodeNum);
+    private static final Comparator<ProjectModule> PROJECT_MODULE_COMPARATOR = Comparator.comparingInt(
+            ProjectModule::getProjectCode)
+            .thenComparingInt(ProjectModule::getModuleCode);
+    private static final Comparator<ErrorCode> ERROR_CODE_COMPARATOR = Comparator.comparingInt(ErrorCode::getNodeNum);
 
     public static void register(ProjectModule projectModule, ErrorCode errorCode) {
         Preconditions.checkNotNull(projectModule);
@@ -50,15 +48,9 @@ public class ErrorManager {
                 .sorted((it1, it2) -> PROJECT_MODULE_COMPARATOR.compare(it1.getKey(), it2.getKey()))
                 .collect(
                         Collectors.groupingBy(
-                                e ->
-                                        new TreeNode(
-                                                e.getKey().getProjectCode(),
-                                                e.getKey().getProjectName()),
+                                e -> new TreeNode(e.getKey().getProjectCode(), e.getKey().getProjectName()),
                                 Collectors.groupingBy(
-                                        it ->
-                                                new TreeNode(
-                                                        it.getKey().getModuleCode(),
-                                                        it.getKey().getModuleName()),
+                                        it -> new TreeNode(it.getKey().getModuleCode(), it.getKey().getModuleName()),
                                         Collectors.mapping(
                                                 Map.Entry::getValue, Collectors.toList()))))
                 .entrySet()
@@ -66,28 +58,23 @@ public class ErrorManager {
                 .map(
                         e -> {
                             TreeNode top = e.getKey();
-                            List<TreeNode> middleNode =
-                                    e.getValue().entrySet().stream()
-                                            .map(
-                                                    e1 -> {
-                                                        TreeNode key = e1.getKey();
-                                                        List<TreeNode> leftNode =
-                                                                e1.getValue().stream()
-                                                                        .flatMap(Collection::stream)
-                                                                        .map(
-                                                                                errorCode ->
-                                                                                        new TreeNode(
-                                                                                                errorCode
-                                                                                                        .getCode(),
-                                                                                                errorCode
-                                                                                                        .getMsg()))
-                                                                        .collect(
-                                                                                Collectors
-                                                                                        .toList());
-                                                        key.setNodes(leftNode);
-                                                        return key;
-                                                    })
-                                            .collect(Collectors.toList());
+                            List<TreeNode> middleNode = e.getValue().entrySet().stream()
+                                    .map(
+                                            e1 -> {
+                                                TreeNode key = e1.getKey();
+                                                List<TreeNode> leftNode = e1.getValue().stream()
+                                                        .flatMap(Collection::stream)
+                                                        .map(
+                                                                errorCode -> new TreeNode(errorCode
+                                                                        .getCode(), errorCode
+                                                                                .getMsg()))
+                                                        .collect(
+                                                                Collectors
+                                                                        .toList());
+                                                key.setNodes(leftNode);
+                                                return key;
+                                            })
+                                    .collect(Collectors.toList());
                             top.setNodes(middleNode);
                             return top;
                         })
@@ -95,9 +82,7 @@ public class ErrorManager {
     }
 
     private static int genCode(ProjectModule projectModule, ErrorCode errorCode) {
-        return projectModule.getProjectCode() * 10000
-                + projectModule.getModuleCode() * 100
-                + errorCode.getNodeNum();
+        return projectModule.getProjectCode() * 10000 + projectModule.getModuleCode() * 100 + errorCode.getNodeNum();
     }
 
     public static int genCode(ErrorCode errorCode) {
